fix: Restore tabs to bottom navigation for filtering categories

--- a/index.html
+++ b/index.html
@@ -97,6 +97,31 @@
       color: var(--highlight);
       text-decoration: none;
     }
+
+    .tab, .theme-toggle {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      padding: 8px 16px;
+      border: 1px solid var(--border);
+      background: var(--blur-background);
+      backdrop-filter: blur(4px);
+    }
+
+    .tabs-container {
+      position: fixed;
+      bottom: 16px;
+      left: 50%;
+      transform: translateX(-50%);
+      display: flex;
+      gap: 16px;
+    }
+
+    .tab.active {
+      background: var(--border);
+      color: var(--bg);
+    }
   </style>
 </head>
 <body data-theme="dark">
@@ -115,6 +140,7 @@
   <div class="tabs-container">
     <div id="designTab" class="tab active" onclick="filterCategory('design')">Design</div>
     <div id="aiTab" class="tab" onclick="filterCategory('ai')">AI</div>
+    <div id="newsTab" class="tab" onclick="filterCategory('news')">News</div>
     <button class="theme-toggle" onclick="toggleTheme()">
       <svg id="sunIcon" class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="var(--icon-sun)" viewBox="0 0 24 24">
         <path fill-rule="evenodd" d="M13 3a1 1 0 1 0-2 0v2a1 1 0 1 0 2 0V3ZM6.343 4.929A1 1 0 0 0 4.93 6.343l1.414 1.414a1 1 0 0 0 1.414-1.414L6.343 4.929Zm12.728 1.414a1 1 0 0 0-1.414-1.414l-1.414 1.414a1 1 0 0 0 1.414 1.414l1.414-1.414ZM12 7a5 5 0 1 0 0 10 5 5 0 0 0 0-10Zm-9 4a1 1 0 1 0 0 2h2a1 1 0 1 0 0-2H3Zm16 0a1 1 0 1 0 0 2h2a1 1 0 1 0 0-2h-2ZM7.757 17.657a1 1 0 1 0-1.414-1.414l-1.414 1.414a1 1 0 1 0 1.414 1.414l1.414-1.414Zm9.9-1.414a1 1 0 0 0-1.414 1.414l1.414 1.414a1 1 0 0 0 1.414-1.414l-1.414-1.414ZM13 19a1 1 0 1 0-2 0v2a1 1 0 1 0 2 0v-2Z" clip-rule="evenodd"/>
@@ -180,7 +206,7 @@
       try {
         const response = await fetch('data/news.json');
         const { articles } = await response.json();
-        newsArticles = articles.filter(article => article.category === 'design' || article.category === 'ai');
+        newsArticles = articles.filter(article => article.category === 'design' || article.category === 'ai' || article.category === 'news');
         filterCategory('design');
       } catch (err) {
         container.innerHTML = '<p>Failed to load news. Try again later.</p>';
