fix: Ensure no horizontal scrolling on the page

--- a/index.html
+++ b/index.html
@@ -44,6 +44,10 @@
       --icon-moon: #ff4500; /* Orange Moon for Dark */
     }
 
+    * {
+      box-sizing: border-box;
+    }
+
     body {
       margin: 0;
       font-family: var(--font-mono);
