fix: Address horizontal scrolling issue on mobile by adjusting HTML styling

--- a/index.html
+++ b/index.html
@@ -48,13 +48,10 @@
       box-sizing: border-box;
     }
 
-    body {
+    html, body {
       margin: 0;
-      font-family: var(--font-mono);
-      background: var(--bg);
-      color: var(--text-primary);
-      line-height: 1.6;
-      padding: var(--padding);
+      padding: 0;
+      width: 100%;
       overflow-x: hidden;
     }
 
