--- a/index.html
+++ b/index.html
@@ -48,11 +48,17 @@
       box-sizing: border-box;
     }
 
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
+    html {
       overflow-x: hidden;
+    }
+
+    body {
+      margin: 0;
+      font-family: var(--font-mono);
+      background: var(--bg);
+      color: var(--text-primary);
+      line-height: 1.6;
+      padding: var(--padding);
     }
 
     .container {
